# wf-manager

./: .gitignore  GUI.py  LICENSE  README.md  install.py  modulesToImport.txt  pyproject.toml  pytest.ini  requirements.txt  sample.py  wfManager.py
debug/: main-tst.py  main.tst.py
source/core/: IO.py  cmd.py  extra.py  helper.py  interface.py  log.py  syntax.py  system.py  web.py
source/lib/: GUI.py  Uinterface.py  api.py  cmd.py  file.txt  filesys.py  interfaceCmd.py  main.py  make.archive.txt  session.py  spawn.py
source/lib/www/: main.html
source/lib/www/js/: master.js
source/update/: Ucore.py  Ulib.py
src/lib/: Uinterface.py
src/lib/www/: main.html
tests/: main.py
tkinter-docs/basic/: basic.py
tkinter-docs/buttons/: buttons.py
tkinter-docs/checkbox/: checkbox.py
tkinter-docs/colorpicker/: colorpicker.py
tkinter-docs/inputs/: inputs.py
tkinter-docs/labels/: labels.py
tkinter-docs/listbox/: listbox.py
tkinter-docs/msgboxes/: msgboxes.py
tkinter-docs/radiobtn/: radiobtn.py
tkinter-docs/scales/: scales.py
