[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wf-manager"
version = "v0.1 ALPHA"
description = "A non-invasive, 3rd-party data parser and interface for Warframe."
authors = [
  { name="Sterling McCrevey", email="smccrevey@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.56.0",
    "idna==3.10",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "numpy==2.2.3",
    "packaging==24.2",
    "pillow==11.1.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "six==1.17.0",
    "ttkbootstrap==1.10.1",
    "urllib3==2.3.0"
]

[tool.hatch.metadata]
# You can add hatch-specific metadata/config here if needed