[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wf-manager"
version = "v0.1 ALPHA"
description = "A non-invasive, 3rd-party data parser and interface for Warframe."
authors = [
  { name="Sterling McCrevey", email="smccrevey@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.56.0",
    "idna==3.10",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "numpy==2.2.3",
    "packaging==24.2",
    "pillow==11.1.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "six==1.17.0",
    "ttkbootstrap==1.10.1",
    "urllib3==2.3.0"
]

[tool.hatch.metadata]
# You can add hatch-specific metadata/config here if needed

init-hook="
    exec 'aW1wb3J0IHN5cywgb3MKCmlmICdWSVJUVUFMX0VOVicgbm90IGluIG9zLmVudmlyb246CiAgICBz \
    eXMuZXhpdCgwKQoKdmVfZGlyID0gb3MuZW52aXJvblsnVklSVFVBTF9FTlYnXQp2ZV9kaXIgaW4g \
    c3lzLnBhdGggb3Igc3lzLnBhdGguaW5zZXJ0KDAsIHZlX2RpcikKYWN0aXZhdGVfdGhpcyA9IG9z \
    LnBhdGguam9pbihvcy5wYXRoLmpvaW4odmVfZGlyLCAnYmluJyksICdhY3RpdmF0ZV90aGlzLnB5 \
    JykKCiMgRml4IGZvciB3aW5kb3dzCmlmIG5vdCBvcy5wYXRoLmV4aXN0cyhhY3RpdmF0ZV90aGlz \
    KToKICAgIGFjdGl2YXRlX3RoaXMgPSBvcy5wYXRoLmpvaW4ob3MucGF0aC5qb2luKHZlX2Rpciwg \
    J1NjcmlwdHMnKSwgJ2FjdGl2YXRlX3RoaXMucHknKQoKZXhlY2ZpbGUoYWN0aXZhdGVfdGhpcywg \
    ZGljdChfX2ZpbGVfXz1hY3RpdmF0ZV90aGlzKSkK'.decode('base64')"
